# codebraid

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
codebraid/: __init__.py  cmdline.py  code_chunks.py  code_collections.py  codebraid_defaults.py  err.py  language.py  message.py  progress.py  terminal.py  util.py  version.py
codebraid/codeprocessors/: __init__.py  base.py  exec_builtin.py  exec_jupyter.py
codebraid/converters/: __init__.py  base.py  pandoc.py
codebraid/languages/: R.bespon  gap.bespon  index.bespon  javascript.bespon  julia.bespon  python.bespon  rust.bespon  shell.bespon
codebraid/languages/scripts/: python_repl.py
examples/: R.cbmd  R.html  R_output.md  bash.cbmd  bash.html  bash_output.md  build_R.bat  build_R.sh  build_bash.sh  build_gap.sh  build_javascript.bat  build_javascript.sh  build_julia.bat  build_julia.sh  build_jupyter.bat  build_jupyter.sh  build_python.bat  build_python.sh  build_rust.bat  build_rust.sh  build_sagemath.sh  example.css  gap.cbmd  gap.html  gap_output.md  javascript.cbmd  javascript.html  javascript_output.md  julia.cbmd  julia.html  julia_output.md  jupyter.cbmd  jupyter.html  jupyter_output.md  python.cb.md  python.cbmd  python.html  python_output.md  rust.cbmd  rust.html  (+3 more)
